fix(bootstrap): #WB-3275 align images in tiptap editor #239 (#251)

--- a/packages/bootstrap/scss/components/tiptap/_custom-image.scss
+++ b/packages/bootstrap/scss/components/tiptap/_custom-image.scss
@@ -9,4 +9,12 @@ p:has(.node-custom-image) {
   gap: $spacer-16;
   flex-wrap: wrap;
   overflow-wrap: anywhere;
+
+  &[style="text-align: center"] {
+    justify-content: center;
+  }
+
+  &[style="text-align: right"] {
+    justify-content: end;
+  }
 }
